<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_periodic_notification">Send Periodic Notification</string>
    <string name="send_local_notification">Send Local Notification</string>
    <string name="stop_service">stop Service</string>
    <string name="start_service">start Service</string>
    <string name="next">Next</string>
    <string name="add_data">Add Data</string>
    <string name="add_title">Add Title</string>
    <string name="add_description">Add description</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="sign_out">sign out</string>
    <string name="forgot_password">Forgot password</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="enter_otp">Enter otp</string>
    <string name="verify">Verify</string>
    <string name="send_otp">Send OTP</string>
</resources>